--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "inlineSourceMap": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "outDir": "lib"
   },
   "exclude": [
     "app/public",
